modernized the app to Java 21 and leveraged Lombok features