@@ -2,9 +2,8 @@ package com.company.datavalidation.service.validation;
 
 import com.company.datavalidation.model.*;
 import com.company.datavalidation.repository.*;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
@@ -12,14 +11,13 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
+@Slf4j
 public class ValidationExecutor {
-
-    private static final Logger logger = LoggerFactory.getLogger(ValidationExecutor.class);
 
     private final ComparisonConfigRepository comparisonConfigRepository;
     private final DayOverDayConfigRepository dayOverDayConfigRepository;
@@ -27,45 +25,36 @@ public class ValidationExecutor {
     private final ThresholdValidator thresholdValidator;
     private final ValidationResultRepository validationResultRepository;
 
-    private final ExecutorService executorService = Executors.newFixedThreadPool(5);
-
-    @Autowired
-    public ValidationExecutor(ComparisonConfigRepository comparisonConfigRepository, DayOverDayConfigRepository dayOverDayConfigRepository, CrossTableConfigRepository crossTableConfigRepository, ThresholdValidator thresholdValidator, ValidationResultRepository validationResultRepository) {
-        this.comparisonConfigRepository = comparisonConfigRepository;
-        this.dayOverDayConfigRepository = dayOverDayConfigRepository;
-        this.crossTableConfigRepository = crossTableConfigRepository;
-        this.thresholdValidator = thresholdValidator;
-        this.validationResultRepository = validationResultRepository;
-    }
-
     /**
      * Execute all enabled validations
      * @return List of validation results
      */
     public List<ValidationResult> executeAllValidations() {
-        logger.info("Starting execution of all enabled validations");
+        log.info("Starting execution of all enabled validations");
 
         // Get all enabled comparison configs
         List<ComparisonConfig> enabledConfigs = comparisonConfigRepository.findByEnabled(true);
+        log.debug("Found {} enabled comparison configurations", enabledConfigs.size());
 
-        // Execute validations for each config
-        List<CompletableFuture<List<ValidationResult>>> futures = new ArrayList<>();
+        // Execute validations for each config using virtual threads
+        try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+            List<CompletableFuture<List<ValidationResult>>> futures = new ArrayList<>();
 
-        for (ComparisonConfig config : enabledConfigs) {
-            CompletableFuture<List<ValidationResult>> future = CompletableFuture.supplyAsync(
-                    () -> executeValidation(config), executorService);
-            futures.add(future);
+            for (ComparisonConfig config : enabledConfigs) {
+                CompletableFuture<List<ValidationResult>> future = CompletableFuture.supplyAsync(
+                        () -> executeValidation(config), executor);
+                futures.add(future);
+            }
+
+            // Combine all results
+            List<ValidationResult> allResults = futures.stream()
+                    .map(CompletableFuture::join)
+                    .flatMap(List::stream)
+                    .collect(Collectors.toList());
+
+            log.info("Completed execution of all enabled validations. Total: {}", allResults.size());
+            return allResults;
         }
-
-        // Combine all results
-        List<ValidationResult> allResults = futures.stream()
-                .map(CompletableFuture::join)
-                .flatMap(List::stream)
-                .collect(Collectors.toList());
-
-        logger.info("Completed execution of all enabled validations. Total: {}", allResults.size());
-
-        return allResults;
     }
 
     /**
@@ -74,19 +63,14 @@ public class ValidationExecutor {
      * @return List of validation results
      */
     public List<ValidationResult> executeValidationForTable(String tableName) {
-        logger.info("Starting execution of validations for table: {}", tableName);
+        log.info("Starting execution of validations for table: {}", tableName);
 
-        Optional<ComparisonConfig> configOpt = comparisonConfigRepository.findByTableNameIgnoreCase(tableName);
-
-        if (configOpt.isPresent()) {
-            ComparisonConfig config = configOpt.get();
-            List<ValidationResult> results = executeValidation(config);
-            logger.info("Completed execution of validations for table: {}. Total: {}", tableName, results.size());
-            return results;
-        } else {
-            logger.warn("No comparison configuration found for table: {}", tableName);
-            return new ArrayList<>();
-        }
+        return comparisonConfigRepository.findByTableNameIgnoreCase(tableName)
+                .map(this::executeValidation)
+                .orElseGet(() -> {
+                    log.warn("No comparison configuration found for table: {}", tableName);
+                    return List.of();
+                });
     }
 
     /**
@@ -95,19 +79,14 @@ public class ValidationExecutor {
      * @return List of validation results
      */
     public List<ValidationResult> executeValidationForConfig(Long configId) {
-        logger.info("Starting execution of validations for config ID: {}", configId);
+        log.info("Starting execution of validations for config ID: {}", configId);
 
-        Optional<ComparisonConfig> configOpt = comparisonConfigRepository.findById(configId);
-
-        if (configOpt.isPresent()) {
-            ComparisonConfig config = configOpt.get();
-            List<ValidationResult> results = executeValidation(config);
-            logger.info("Completed execution of validations for config ID: {}. Total: {}", configId, results.size());
-            return results;
-        } else {
-            logger.warn("No comparison configuration found for ID: {}", configId);
-            return new ArrayList<>();
-        }
+        return comparisonConfigRepository.findById(configId)
+                .map(this::executeValidation)
+                .orElseGet(() -> {
+                    log.warn("No comparison configuration found for ID: {}", configId);
+                    return List.of();
+                });
     }
 
     /**
@@ -119,45 +98,62 @@ public class ValidationExecutor {
         List<ValidationResult> results = new ArrayList<>();
 
         if (!config.isEnabled()) {
-            logger.info("Skipping validation for disabled config: {}", config.getId());
+            log.info("Skipping validation for disabled config: {}", config.getId());
             return results;
         }
 
         // Execute day-over-day validations
-        Optional<DayOverDayConfig> dayOverDayConfigOpt = dayOverDayConfigRepository.findByComparisonConfigId(config.getId());
-        if (dayOverDayConfigOpt.isPresent()) {
-            DayOverDayConfig dayOverDayConfig = dayOverDayConfigOpt.get();
-            if (dayOverDayConfig.isEnabled()) {
-                try {
-                    ValidationResult result = thresholdValidator.validateDayOverDay(dayOverDayConfig);
-                    results.add(result);
-                } catch (Exception e) {
-                    logger.error("Error executing day-over-day validation for config: " + config.getId(), e);
-                    ValidationResult result = new ValidationResult();
-                    result.setComparisonConfig(config);
-                    result.setSuccess(false);
-                    result.setErrorMessage("Error: " + e.getMessage());
-                    result.setExecutionDate(LocalDateTime.now());
-                    results.add(result);
-                }
-            }
-        }
+        dayOverDayConfigRepository.findByComparisonConfigId(config.getId())
+                .filter(DayOverDayConfig::isEnabled)
+                .ifPresent(dayOverDayConfig -> {
+                    try {
+                        ValidationResult result = thresholdValidator.validateDayOverDay(dayOverDayConfig);
+                        results.add(result);
+                    } catch (Exception e) {
+                        log.error("Error executing day-over-day validation for config: {}", config.getId(), e);
+                        ValidationResult result = ValidationResult.builder()
+                                .comparisonConfig(config)
+                                .success(false)
+                                .errorMessage("Error: " + e.getMessage())
+                                .executionDate(LocalDateTime.now())
+                                .build();
+                        results.add(result);
+                    }
+                });
 
-        // Execute cross-table validations
-        List<CrossTableConfig> crossTableConfigs = crossTableConfigRepository.findBySourceComparisonConfigAndEnabled(config, true);
-        for (CrossTableConfig crossTableConfig : crossTableConfigs) {
-            try {
-                ValidationResult result = thresholdValidator.validateCrossTable(crossTableConfig);
-                results.add(result);
-            } catch (Exception e) {
-                logger.error("Error executing cross-table validation for config: " + config.getId() +
-                        " and target table: " + crossTableConfig.getTargetTableName(), e);
-                ValidationResult result = new ValidationResult();
-                result.setComparisonConfig(config);
-                result.setSuccess(false);
-                result.setErrorMessage("Error: " + e.getMessage());
-                result.setExecutionDate(LocalDateTime.now());
-                results.add(result);
+        // Execute cross-table validations using virtual threads for parallel processing
+        try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+            List<CrossTableConfig> crossTableConfigs = crossTableConfigRepository
+                    .findBySourceComparisonConfigAndEnabled(config, true);
+
+            if (!crossTableConfigs.isEmpty()) {
+                log.debug("Found {} enabled cross-table configurations", crossTableConfigs.size());
+
+                // Execute validations in parallel using virtual threads
+                List<CompletableFuture<ValidationResult>> crossTableFutures =
+                        crossTableConfigs.stream()
+                                .map(crossTableConfig -> CompletableFuture.supplyAsync(() -> {
+                                    try {
+                                        return thresholdValidator.validateCrossTable(crossTableConfig);
+                                    } catch (Exception e) {
+                                        log.error("Error executing cross-table validation for config: {} and target table: {}",
+                                                config.getId(), crossTableConfig.getTargetTableName(), e);
+                                        return ValidationResult.builder()
+                                                .comparisonConfig(config)
+                                                .success(false)
+                                                .errorMessage("Error: " + e.getMessage())
+                                                .executionDate(LocalDateTime.now())
+                                                .build();
+                                    }
+                                }, executor))
+                                .toList();
+
+                // Collect cross-table validation results
+                List<ValidationResult> crossTableResults = crossTableFutures.stream()
+                        .map(CompletableFuture::join)
+                        .toList();
+
+                results.addAll(crossTableResults);
             }
         }
 
@@ -170,27 +166,21 @@ public class ValidationExecutor {
      * @return New validation result
      */
     public ValidationResult retryValidation(Long validationResultId) {
-        logger.info("Retrying validation for result ID: {}", validationResultId);
+        log.info("Retrying validation for result ID: {}", validationResultId);
 
         // Get the failed validation result
-        Optional<ValidationResult> failedResultOpt = validationResultRepository.findById(validationResultId);
+        return validationResultRepository.findById(validationResultId)
+                .map(failedResult -> {
+                    ComparisonConfig config = failedResult.getComparisonConfig();
 
-        if (failedResultOpt.isPresent()) {
-            ValidationResult failedResult = failedResultOpt.get();
-            ComparisonConfig config = failedResult.getComparisonConfig();
+                    // Execute validation for this config
+                    List<ValidationResult> results = executeValidation(config);
 
-            // Execute validation for this config
-            List<ValidationResult> results = executeValidation(config);
-
-            if (!results.isEmpty()) {
-                return results.get(0);
-            } else {
-                logger.warn("No results from retry for validation result ID: {}", validationResultId);
-                return null;
-            }
-        } else {
-            logger.warn("No validation result found for ID: {}", validationResultId);
-            return null;
-        }
+                    return results.isEmpty() ? null : results.getFirst();
+                })
+                .orElseGet(() -> {
+                    log.warn("No validation result found for ID: {}", validationResultId);
+                    return null;
+                });
     }
 }
